// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsController createCardInfo should process data object to cardInfo using column configuration 1`] = `
{
  "columns": [
    {
      "alignment": "left",
      "allowEditing": true,
      "allowFiltering": true,
      "allowHeaderFiltering": false,
      "allowHiding": true,
      "allowReordering": true,
      "allowSearch": true,
      "allowSorting": true,
      "calculateCellValue": [Function],
      "calculateDisplayValue": [Function],
      "calculateFieldValue": [Function],
      "calculateFilterExpression": [Function],
      "caption": "A",
      "dataField": "a",
      "dataType": "string",
      "defaultCalculateFilterExpression": [Function],
      "defaultSetFieldValue": [Function],
      "editorOptions": {},
      "falseText": undefined,
      "fieldCaptionTemplate": undefined,
      "fieldTemplate": undefined,
      "fieldValueTemplate": undefined,
      "formItem": {},
      "headerFilter": {
        "allowSelectAll": true,
        "height": 325,
        "search": {
          "editorOptions": {},
          "enabled": false,
          "mode": "contains",
          "timeout": 500,
        },
        "width": 252,
      },
      "headerItemTemplate": undefined,
      "name": "a",
      "selector": [Function],
      "setFieldValue": [Function],
      "showInColumnChooser": true,
      "trueText": undefined,
      "validationRules": [],
      "visible": true,
      "visibleIndex": 0,
    },
    {
      "alignment": "left",
      "allowEditing": true,
      "allowFiltering": true,
      "allowHeaderFiltering": false,
      "allowHiding": true,
      "allowReordering": true,
      "allowSearch": true,
      "allowSorting": true,
      "calculateCellValue": [Function],
      "calculateDisplayValue": [Function],
      "calculateFieldValue": [Function],
      "calculateFilterExpression": [Function],
      "caption": "B",
      "dataField": "b",
      "dataType": "string",
      "defaultCalculateFilterExpression": [Function],
      "defaultSetFieldValue": [Function],
      "editorOptions": {},
      "falseText": undefined,
      "fieldCaptionTemplate": undefined,
      "fieldTemplate": undefined,
      "fieldValueTemplate": undefined,
      "formItem": {},
      "headerFilter": {
        "allowSelectAll": true,
        "height": 325,
        "search": {
          "editorOptions": {},
          "enabled": false,
          "mode": "contains",
          "timeout": 500,
        },
        "width": 252,
      },
      "headerItemTemplate": undefined,
      "name": "b",
      "selector": [Function],
      "setFieldValue": [Function],
      "showInColumnChooser": true,
      "trueText": undefined,
      "validationRules": [],
      "visible": true,
      "visibleIndex": 1,
    },
  ],
  "data": {
    "a": "my a value",
    "b": "my b value",
    "id": 1,
  },
  "fields": [
    {
      "card": [Circular],
      "column": {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "A",
        "dataField": "a",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "a",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 0,
      },
      "displayValue": "my a value",
      "highlightedText": null,
      "index": 0,
      "text": "my a value",
      "value": "my a value",
    },
    {
      "card": [Circular],
      "column": {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "B",
        "dataField": "b",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "b",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 1,
      },
      "displayValue": "my b value",
      "highlightedText": null,
      "index": 1,
      "text": "my b value",
      "value": "my b value",
    },
  ],
  "index": 0,
  "isSelected": false,
  "key": 1,
  "values": [
    "my a value",
    "my b value",
  ],
  "visible": true,
}
`;

exports[`ItemsController createCardInfo should process data object to cardInfo using column configuration 2`] = `
{
  "columns": [
    {
      "alignment": "left",
      "allowEditing": true,
      "allowFiltering": true,
      "allowHeaderFiltering": false,
      "allowHiding": true,
      "allowReordering": true,
      "allowSearch": true,
      "allowSorting": true,
      "calculateCellValue": [Function],
      "calculateDisplayValue": [Function],
      "calculateFieldValue": [Function],
      "calculateFilterExpression": [Function],
      "caption": "A",
      "dataField": "a",
      "dataType": "string",
      "defaultCalculateFilterExpression": [Function],
      "defaultSetFieldValue": [Function],
      "editorOptions": {},
      "falseText": undefined,
      "fieldCaptionTemplate": undefined,
      "fieldTemplate": undefined,
      "fieldValueTemplate": undefined,
      "formItem": {},
      "headerFilter": {
        "allowSelectAll": true,
        "height": 325,
        "search": {
          "editorOptions": {},
          "enabled": false,
          "mode": "contains",
          "timeout": 500,
        },
        "width": 252,
      },
      "headerItemTemplate": undefined,
      "name": "a",
      "selector": [Function],
      "setFieldValue": [Function],
      "showInColumnChooser": true,
      "trueText": undefined,
      "validationRules": [],
      "visible": true,
      "visibleIndex": 0,
    },
    {
      "alignment": "left",
      "allowEditing": true,
      "allowFiltering": true,
      "allowHeaderFiltering": false,
      "allowHiding": true,
      "allowReordering": true,
      "allowSearch": true,
      "allowSorting": true,
      "calculateCellValue": [Function],
      "calculateDisplayValue": [Function],
      "calculateFieldValue": [Function],
      "calculateFilterExpression": [Function],
      "caption": "B",
      "dataField": "b",
      "dataType": "string",
      "defaultCalculateFilterExpression": [Function],
      "defaultSetFieldValue": [Function],
      "editorOptions": {},
      "falseText": undefined,
      "fieldCaptionTemplate": undefined,
      "fieldTemplate": undefined,
      "fieldValueTemplate": undefined,
      "formItem": {},
      "headerFilter": {
        "allowSelectAll": true,
        "height": 325,
        "search": {
          "editorOptions": {},
          "enabled": false,
          "mode": "contains",
          "timeout": 500,
        },
        "width": 252,
      },
      "headerItemTemplate": undefined,
      "name": "b",
      "selector": [Function],
      "setFieldValue": [Function],
      "showInColumnChooser": true,
      "trueText": undefined,
      "validationRules": [],
      "visible": true,
      "visibleIndex": 1,
    },
  ],
  "data": {
    "a": "my a value",
    "b": "my b value",
    "id": 1,
  },
  "fields": [
    {
      "card": [Circular],
      "column": {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "A",
        "dataField": "a",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "a",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 0,
      },
      "displayValue": "my a value",
      "highlightedText": null,
      "index": 0,
      "text": "my a value",
      "value": "my a value",
    },
    {
      "card": [Circular],
      "column": {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "B",
        "dataField": "b",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "b",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 1,
      },
      "displayValue": "my b value",
      "highlightedText": null,
      "index": 1,
      "text": "my b value",
      "value": "my b value",
    },
  ],
  "index": 0,
  "isSelected": true,
  "key": 1,
  "values": [
    "my a value",
    "my b value",
  ],
  "visible": true,
}
`;

exports[`ItemsController setSelectionState should update the select state of the item 1`] = `
[
  {
    "columns": [
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "number",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 0,
        "name": "id",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowEditing": true,
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFieldValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "A",
        "dataField": "a",
        "dataType": "string",
        "defaultCalculateFilterExpression": [Function],
        "defaultSetFieldValue": [Function],
        "editorOptions": {},
        "falseText": undefined,
        "fieldCaptionTemplate": undefined,
        "fieldTemplate": undefined,
        "fieldValueTemplate": undefined,
        "formItem": {},
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "headerPanelIndex": 1,
        "name": "a",
        "selector": [Function],
        "setFieldValue": [Function],
        "showInColumnChooser": true,
        "trueText": undefined,
        "validationRules": [],
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    "data": {
      "a": "my a value",
      "id": 1,
    },
    "fields": [
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "Id",
          "dataField": "id",
          "dataType": "number",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 0,
          "name": "id",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 0,
        },
        "displayValue": 1,
        "highlightedText": null,
        "index": 0,
        "text": "1",
        "value": 1,
      },
      {
        "card": [Circular],
        "column": {
          "alignment": "left",
          "allowEditing": true,
          "allowFiltering": true,
          "allowHeaderFiltering": false,
          "allowHiding": true,
          "allowReordering": true,
          "allowSearch": true,
          "allowSorting": true,
          "calculateCellValue": [Function],
          "calculateDisplayValue": [Function],
          "calculateFieldValue": [Function],
          "calculateFilterExpression": [Function],
          "caption": "A",
          "dataField": "a",
          "dataType": "string",
          "defaultCalculateFilterExpression": [Function],
          "defaultSetFieldValue": [Function],
          "editorOptions": {},
          "falseText": undefined,
          "fieldCaptionTemplate": undefined,
          "fieldTemplate": undefined,
          "fieldValueTemplate": undefined,
          "formItem": {},
          "headerFilter": {
            "allowSelectAll": true,
            "height": 325,
            "search": {
              "editorOptions": {},
              "enabled": false,
              "mode": "contains",
              "timeout": 500,
            },
            "width": 252,
          },
          "headerItemTemplate": undefined,
          "headerPanelIndex": 1,
          "name": "a",
          "selector": [Function],
          "setFieldValue": [Function],
          "showInColumnChooser": true,
          "trueText": undefined,
          "validationRules": [],
          "visible": true,
          "visibleIndex": 1,
        },
        "displayValue": "my a value",
        "highlightedText": null,
        "index": 1,
        "text": "my a value",
        "value": "my a value",
      },
    ],
    "index": 0,
    "isSelected": true,
    "key": 1,
    "values": [
      1,
      "my a value",
    ],
    "visible": true,
  },
]
`;
